--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+
+    // ❗作为 Xposed 模块使用务必添加，其它情况可选
+    id 'com.google.devtools.ksp' version '1.8.20-1.0.10'
 }
 
 android {
@@ -24,11 +27,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
     }
 }
 
@@ -42,4 +45,11 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    // 基础依赖
+    implementation 'com.highcapable.yukihookapi:api:1.1.9'
+    // ❗作为 Xposed 模块使用务必添加，其它情况可选
+    compileOnly 'de.robv.android.xposed:api:82'
+    // ❗作为 Xposed 模块使用务必添加，其它情况可选
+    ksp 'com.highcapable.yukihookapi:ksp-xposed:1.1.9'
 }
