--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,19 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        apply from: 'sign.gradle'
+        def keyFile = "${storeFile}"
+        def keyPwd = "${storePassword}"
+        def alias = "${keyAlias}"
+        def aliasPwd = "${keyPassword}"
+        release {
+            storeFile file(keyFile)
+            storePassword keyPwd
+            keyAlias alias
+            keyPassword aliasPwd
+        }
+    }
     namespace 'org.liuyi.mifreeformx'
     compileSdk 33
 
@@ -56,15 +69,16 @@ dependencies {
 
     implementation 'com.blankj:utilcodex:1.31.1'
 }
+
 static def getSelfDefinedVersion(type) {
     int aa = 1
     int bb = 0  // 0-99
-    int cc = 4  // 0-99
+    int cc = 5  // 0-99
 
     if ("code" == type) {
         aa * 10000 + bb * 100 + cc
     } else if ("name" == type) {
-        String today = new Date().format("yy.MM.dd.HH.mm.ss")
+        String today = new Date().format("yy.MM.dd.HHmmss")
         "$today-beta"
     }
 }
