--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 
     // ❗作为 Xposed 模块使用务必添加，其它情况可选
-    id 'com.google.devtools.ksp' version '1.8.20-1.0.10'
+    id 'com.google.devtools.ksp' version '1.8.21-1.0.11'
 }
 
 android {
@@ -52,14 +52,14 @@ android {
 dependencies {
 
     implementation project(path: ':blockmiui')
-    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.annotation:annotation-jvm:1.6.0'
 
     // 基础依赖
-    implementation 'com.highcapable.yukihookapi:api:1.1.9'
+    implementation 'com.highcapable.yukihookapi:api:1.1.11'
     // ❗作为 Xposed 模块使用务必添加，其它情况可选
     compileOnly 'de.robv.android.xposed:api:82'
     // ❗作为 Xposed 模块使用务必添加，其它情况可选
-    ksp 'com.highcapable.yukihookapi:ksp-xposed:1.1.9'
+    ksp 'com.highcapable.yukihookapi:ksp-xposed:1.1.11'
 
     implementation 'com.blankj:utilcodex:1.31.1'
 }
