--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
 
     implementation project(path: ':blockmiui')
     implementation 'androidx.annotation:annotation-jvm:1.6.0'
+    implementation 'androidx.collection:collection:1.2.0'
 
     // 基础依赖
     implementation 'com.highcapable.yukihookapi:api:1.1.11'
