添加搜索全部软件的权限；分享目标黑名单添加”小米相册-编辑“

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,4 +60,8 @@
             android:resource="@array/xposedscope" />
     </application>
 
+    <uses-permission
+        android:name="android.permission.QUERY_ALL_PACKAGES"
+        tools:ignore="QueryAllPackagesPermission" />
+
 </manifest>
